K8-YAML/3-db-deployment (optional).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: k8-nagp-demo-ns
  
spec:
  replicas: 1

  selector:
    matchLabels:
      app: sqlserver

  template:
    metadata:
      labels:
        app: sqlserver

    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest

        volumeMounts:
        - mountPath: /var/opt/mssql
          name: data

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sql-pvc
