K8-YAML/8-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-deployment
  namespace: k8-nagp-demo-ns
  labels:
        app: product-api-app
        type: api
  
spec:
  selector:
    matchLabels:
      app: product-api-app

  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1

  template:
    metadata:
      name: product-api-pod
      labels:
        app: product-api-app

    spec:
      containers:
      - name: product-api-container
        image: vikassojitra/productapi-k8-demo:api-v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        
        ports:
        - containerPort: 8080
          name: http
          
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
