K8-YAML/2-headless-service-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: k8-nagp-demo-ns

spec:
  clusterIP: None

  selector:
    app: sqlserver

  ports:
  - port: 1433
    targetPort: 1433
