K8-YAML/4-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-service
  namespace: k8-nagp-demo-ns

spec:
  type: ClusterIP
  selector:
    app: sqlserver

  ports:
  - port: 1433
