K8-YAML/9-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  namespace: k8-nagp-demo-ns
spec:
  selector:
    app: product-api-app
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
  type: NodePort
